--- a/production/фирми_за_сътрудничество.md
+++ b/production/фирми_за_сътрудничество.md
@@ -1,4 +1,4 @@
-# Фирми за сътрудничесто
+# Фирми за сътрудничество
 ## CNC
 - [www.3dts.bg](https://www.3dts.bg/%d0%bf%d1%80%d0%be%d0%b8%d0%b7%d0%b2%d0%be%d0%b4%d1%81%d1%82%d0%b2%d0%be-%d0%bd%d0%b0-%d1%80%d0%b5%d0%b7%d0%b5%d1%80%d0%b2%d0%bd%d0%b8-%d1%87%d0%b0%d1%81%d1%82%d0%b8-%d0%b8%d0%bd%d0%b6%d0%b5%d0%bd/)
 	+ според сайта: Инженерното ни ателие е създадено специално за проектиране, изчертаване, прототипиране и производство на детайли в единични бройки и малки серии, по клиентска заявка. Това е мястото, където търсим нестандартни решения на нестандартни проблеми.
