--- a/production/фирми_за_сътрудничество.md
+++ b/production/фирми_за_сътрудничество.md
@@ -2,3 +2,10 @@
 ## CNC
 - [www.3dts.bg](https://www.3dts.bg/%d0%bf%d1%80%d0%be%d0%b8%d0%b7%d0%b2%d0%be%d0%b4%d1%81%d1%82%d0%b2%d0%be-%d0%bd%d0%b0-%d1%80%d0%b5%d0%b7%d0%b5%d1%80%d0%b2%d0%bd%d0%b8-%d1%87%d0%b0%d1%81%d1%82%d0%b8-%d0%b8%d0%bd%d0%b6%d0%b5%d0%bd/)
 	+ според сайта: Инженерното ни ателие е създадено специално за проектиране, изчертаване, прототипиране и производство на детайли в единични бройки и малки серии, по клиентска заявка. Това е мястото, където търсим нестандартни решения на нестандартни проблеми.
+- [Maijin is specialized in all various custom-made CNC](https://www.chinamaijin.com/service)
+	+ Try Maijin Metal Services in a few easy steps.
+		* Provide CAD files or 3D files or samples: Only through the above information you provided we can know the size, precision, and key features of the product to be controlled,  which is the basis for us to accurately evaluate the price of the product.
+		* Specify process, material, surface treatment: If your requirements are consistent with the drawings you provide, it is not necessary to specify.
+		* Get a quote: Tell us the quantity of products you need, and we will provide you with corresponding ladder prices according to different quantity requirements.
+		* Order your parts: Send your order to us, we will reply to your specific delivery date.
+		* Receiving your parts:  After the order is completed, we will notify you in time and cooperate with you in logistics operations.
